syntax = "proto3";
package soarchain.poa;

option go_package = "soarchain/x/poa/types";

message Challenger {
  string creator = 1;
  string PubKey = 2; 
  string address = 3; 
  string score = 4; 
  string stakedAmount = 5; 
  string netEarnings = 6; 
  string type = 7;
  string ipAddr = 8;
}
